Refactor services to include logging and implement Upsert methods for Items, Sets, and Trips

--- a/ThreeP/Modules/Items/Components/SetsGrid.razor
+++ b/ThreeP/Modules/Items/Components/SetsGrid.razor
@@ -1,7 +1,7 @@
 @namespace ThreeP.Modules.Items
 @inject IDialogService DialogService
 
-@if (!Sets.Any())
+@if (Sets is null||!Sets.Any())
 {
     <NoData/>
 }
