--- a/ThreeP/Modules/Common/Bases/AppState.razor
+++ b/ThreeP/Modules/Common/Bases/AppState.razor
@@ -15,7 +15,7 @@
     [Parameter] public RenderFragment ChildContent { get; set; }
     public string? UserName { get; set; }
     public Settings Settings { get; set; } = new();
-    public Guid? UserId { get; set; }
+    public Guid UserId { get; set; }
     public ClaimsPrincipal UserClaims { get; private set; }
     bool isLoading;
 
@@ -30,14 +30,14 @@
         UserName = UserClaims.Identity?.Name;
         if (!string.IsNullOrWhiteSpace(UserName))
         {
-            UserId = (await UserManager.FindByNameAsync(UserName))?.Id;
+            UserId = (await UserManager.FindByNameAsync(UserName)).Id;
 
             if (Settings is null || Settings.UserId != UserId)
             {
                 Settings = await SettingsService.GetUserSettings(UserName);
                 if (Settings is null)
                 {
-                    Settings = new Settings { UserId = UserId ?? Guid.Empty };
+                    Settings = new Settings { UserId = UserId };
                     await SaveSettings();
                 }
             }
