--- a/ThreeP/Modules/Trips/Pages/TripDetailsPage.razor
+++ b/ThreeP/Modules/Trips/Pages/TripDetailsPage.razor
@@ -1,4 +1,4 @@
-@page "/trip-details/{Id:guid?}"
+@page "/trip-details/{Id:guid}"
 @namespace ThreeP.Modules.Trips
 @inject TripService TripService
 @inject SetService SetService
@@ -46,15 +46,20 @@ else
             @* CHANGE SET *@
             <MudSelect T="Guid?" Value="trip.SetId" ValueChanged="ChangeSet" Variant="Variant.Outlined"
                        Class="@GlobalStyles.VerticalSpacer">
+                <MudSelectItem T="Guid?" Value="@((Guid?)null)">--Brak--</MudSelectItem>
+
                 @foreach (var set in sets)
                 {
-                    <MudSelectItem Value="set.Id">@set.Name</MudSelectItem>
+                    <MudSelectItem T="Guid?" Value="set?.Id">@set.Name</MudSelectItem>
                 }
             </MudSelect>
 
-            <ItemUpdate Item="item" ItemChanged="UpdateSet" />
-            <MVerticalSpacer />
-            <SetItemsGrid @key="set.Id" Set="set" OnEdit="Edit"/>
+            <ItemUpdate Item="item" ItemChanged="UpdateSet"/>
+            <MVerticalSpacer/>
+            @if (set is not null)
+            {
+                <SetItemsGrid Set="set" OnEdit="Edit"/>
+            }
 
         </MudItem>
     </MudGrid>
@@ -62,8 +67,8 @@ else
 
 @code {
     [CascadingParameter] public AppState AppState { get; set; }
-    Guid? userId => AppState.UserId;
-    [Parameter] public Guid? Id { get; set; }
+    Guid userId => AppState.UserId;
+    [Parameter] public Guid Id { get; set; }
     Item? item;
     Trip? trip;
     Set? set;
@@ -79,7 +84,10 @@ else
 
 
     async Task Get() => trip = await TripService.GetById(Id, [x => x.Set], [x => x.UserId == userId]);
+
+
     async Task GetSet() => set = await SetService.GetById(trip?.SetId, [x => x.Items], [x => x.UserId == userId]);
+    // async Task GetSet() => set = await SetService.GetById(trip?.SetId, [x => x.SetItems], [x => x.UserId == userId]);
 
 
     async Task Edit(Item arg) => item = arg;
@@ -97,11 +105,23 @@ else
 
     async Task UpdateSet(Item? arg)
     {
+        /* set.SetItems ??= [];
+        var link = set.SetItems.FirstOrDefault(x => x.ItemId == arg.Id);
+        if (link is null)
+        {
+            set.SetItems.Add(new SetItem
+            {
+                SetId = set.Id,
+                ItemId = arg.Id,
+            });
+        }
+        else set.SetItems.Remove(link);*/
+
         set.Items?.Remove(arg);
         set.Items?.Add(arg);
         set.UserId = userId;
-        // var result = await SetService.UpdateSet(set);
-        var result = await SetService.UpsertSet(set);
+        var result = await SetService.UpdateSet(set);
+        // var result = await SetService.UpsertSet(set);
         ShowResultService.ShowResultMessage(result);
         await GetSet();
     }
