--- a/ThreeP/Modules/Trips/Components/TripUpdate.razor
+++ b/ThreeP/Modules/Trips/Components/TripUpdate.razor
@@ -4,7 +4,7 @@
 
 <div style="text-align: end;">
 </div>
-<MBox Name="Dodaj/Edytuj" Expanded="expanded">
+<MBox Name="Dodaj/Edytuj" Expanded="expanded" ExpandedDisabled="true">
     <HeaderRight>
         <MudButton Disabled="addDisabled" Color="Color.Success" Variant="Variant.Filled" Size="Size.Medium"
                    OnClick="Add">Dodaj
