--- a/ThreeP/Modules/Sets/Components/SetsGrid.razor
+++ b/ThreeP/Modules/Sets/Components/SetsGrid.razor
@@ -1,5 +1,6 @@
 @namespace ThreeP.Modules.Items
 @inject IDialogService DialogService
+@inject  NavigationManager NavigationManager
 
 @if (Sets is null||!Sets.Any())
 {
@@ -7,7 +8,7 @@
 }
 else
 {
-    <MudDataGrid T="Set" Items="Sets" Elevation="GlobalStyles.Elevation"
+    <MudDataGrid T="Set" Items="Sets" Elevation="GlobalStyles.Elevation" RowClick="Details"
                  ReadOnly="false" EditMode="DataGridEditMode.Form" EditTrigger="DataGridEditTrigger.Manual"
                  CommittedItemChanges="OnCommitItemChanges" CanceledEditingItem="OnCanceledEditingItem"
     >
@@ -90,5 +91,10 @@ else
     {
         // ZMIANA: Anulowanie edycji - opcjonalnie można dodać logikę
         StateHasChanged();
+    }
+    
+    async Task Details(DataGridRowClickEventArgs<Set> context)
+    {
+        NavigationManager.NavigateTo($"/set-details/{context.Item.Id}", new NavigationOptions{HistoryEntryState = NavigationManager.Uri});
     }
 }
